--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Excalibur</title>
   </head>
   <body>
+
+    ello
+    
     <script type="module" src="/src/js/game.js"></script>
   </body>
 </html>
